force-app/main/default/objects/WBS_Dependency__c/WBS_Dependency__c.object-meta.xml
<CustomObject>
    <description>Predecessor/Successor dependency link between WBS Items (FS/SS/FF/SF + lag). Consumed by CPMEngine.</description>
    <label>WBS Dependency</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WBS Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>