force-app/main/default/objects/WBS_Dependency__c/fields/Lag_Days__c.field-meta.xml
<CustomField>
    <fullName>Lag_Days__c</fullName>
    <label>Lag (Days)</label>
    <description>Working-day lag (positive) or lead (negative) applied to the dependency.</description>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>