force-app/main/default/objects/WBS_Dependency__c/fields/Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Predecessor__c</fullName>
    <label>Predecessor</label>
    <description>The WBS Item that must complete/start before the successor (per type).</description>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Successor Links</relationshipLabel>
    <relationshipName>Successor_Links</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>