force-app/main/default/objects/WBS_Dependency__c/fields/Successor__c.field-meta.xml
<CustomField>
    <fullName>Successor__c</fullName>
    <label>Successor</label>
    <description>The WBS Item that depends on the predecessor. Child relationship Predecessor_Links is queried by WBSTreeController.</description>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Predecessor Links</relationshipLabel>
    <relationshipName>Predecessor_Links</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
    <type>Lookup</type>
</CustomField>